--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "calcetto",
     "version": "0.1.0",
     "private": true,
-    "proxy": "http://localhost:3001",
+    "proxy": "http://localhost:8080",
     "repository": {
         "type": "git",
         "url": "https://github.com/paolocattani/calcetto.git/"
@@ -25,11 +25,13 @@
         "@svgr/webpack": "4.3.2",
         "@types/body-parser": "^1.17.1",
         "@types/compression": "^1.0.1",
-        "@types/dotenv": "^8.2.0",
+        "@types/cors": "^2.8.6",
         "@types/express-session": "^1.15.15",
         "@types/helmet": "0.0.45",
         "@types/jest": "24.0.21",
         "@types/node": "12.12.5",
+        "@types/passport": "^1.0.1",
+        "@types/passport-auth0": "^1.0.2",
         "@types/react": "16.9.11",
         "@types/react-dom": "16.9.3",
         "@types/sequelize": "^4.28.6",
@@ -46,6 +48,7 @@
         "case-sensitive-paths-webpack-plugin": "2.2.0",
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.4",
+        "cors": "^2.8.5",
         "css-loader": "2.1.1",
         "dotenv": "^6.2.0",
         "dotenv-expand": "5.1.0",
@@ -58,6 +61,8 @@
         "eslint-plugin-react-hooks": "^1.6.1",
         "express": "4.17.1",
         "express-flash": "0.0.2",
+        "express-jwt": "^5.3.1",
+        "express-jwt-authz": "^2.3.1",
         "express-session": "^1.17.0",
         "express-validator": "^6.2.0",
         "file-loader": "3.0.1",
@@ -72,10 +77,13 @@
         "jest-environment-jsdom-fourteen": "0.1.0",
         "jest-resolve": "24.9.0",
         "jest-watch-typeahead": "0.4.0",
+        "jwks-rsa": "^1.6.0",
         "log4js": "^5.3.0",
         "mini-css-extract-plugin": "0.8.0",
         "morgan": "^1.9.1",
         "optimize-css-assets-webpack-plugin": "5.0.3",
+        "passport": "^0.4.0",
+        "passport-auth0": "^1.2.1",
         "path": "0.12.7",
         "pnp-webpack-plugin": "1.5.0",
         "postcss-flexbugs-fixes": "4.1.0",
@@ -131,16 +139,16 @@
             "<rootDir>/src"
         ],
         "collectCoverageFrom": [
-            "src/**/*.{js,jsx,ts,tsx}",
-            "!src/**/*.d.ts"
+            "src/client/**/*.{js,jsx,ts,tsx}",
+            "!src/client/**/*.d.ts"
         ],
         "setupFiles": [
             "react-app-polyfill/jsdom"
         ],
         "setupFilesAfterEnv": [],
         "testMatch": [
-            "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-            "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
+            "<rootDir>/src/client/**/__tests__/**/*.{js,jsx,ts,tsx}",
+            "<rootDir>/src/client/**/*.{spec,test}.{js,jsx,ts,tsx}"
         ],
         "testEnvironment": "jest-environment-jsdom-fourteen",
         "transform": {
