--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+# max age for static contents
+STATIC_CONTENTS_CACHE=10000
+
+# Auth
 AUTH0_AUDIENCE=YOUR_API_IDENTIFIER
 AUTH0_CLIENT_ID=Jz6QVih9OTeJ3ZDkG2sDrSLWOG2FqExw
 AUTH0_DOMAIN=dev-tkgbz7rf.auth0.com
