--- a/package.json
+++ b/package.json
@@ -1,202 +1,83 @@
 {
-    "name": "calcetto",
-    "version": "0.1.0",
-    "private": true,
-    "proxy": "http://localhost:8080",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/paolocattani/calcetto.git/"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "tsc --noEmit && lint-staged"
-        }
-    },
-    "lint-staged": {
-        "*.{js,ts,tsx}": [
-            "eslint . --fix",
-            "git add"
-        ]
-    },
-    "dependencies": {
-        "@babel/core": "7.6.0",
-        "@overnightjs/core": "1.6.9",
-        "@overnightjs/logger": "1.1.9",
-        "@svgr/webpack": "4.3.2",
-        "@types/body-parser": "^1.17.1",
-        "@types/compression": "^1.0.1",
-        "@types/cors": "^2.8.6",
-        "@types/express-session": "^1.15.15",
-        "@types/helmet": "0.0.45",
-        "@types/jest": "24.0.21",
-        "@types/node": "12.12.5",
-        "@types/passport": "^1.0.1",
-        "@types/passport-auth0": "^1.0.2",
-        "@types/react": "16.9.11",
-        "@types/react-dom": "16.9.3",
-        "@types/sequelize": "^4.28.6",
-        "@types/webpack": "4.1.4",
-        "@typescript-eslint/eslint-plugin": "^2.6.1",
-        "@typescript-eslint/parser": "^2.6.1",
-        "babel-eslint": "10.0.3",
-        "babel-jest": "^24.9.0",
-        "babel-loader": "8.0.6",
-        "babel-plugin-named-asset-import": "^0.3.4",
-        "babel-preset-react-app": "^9.0.2",
-        "body-parser": "^1.19.0",
-        "camelcase": "^5.2.0",
-        "case-sensitive-paths-webpack-plugin": "2.2.0",
-        "compression": "^1.7.4",
-        "cookie-parser": "^1.4.4",
-        "cors": "^2.8.5",
-        "css-loader": "2.1.1",
-        "dotenv": "^6.2.0",
-        "dotenv-expand": "5.1.0",
-        "eslint": "^6.6.0",
-        "eslint-config-react-app": "^5.0.2",
-        "eslint-loader": "3.0.2",
-        "eslint-plugin-flowtype": "3.13.0",
-        "eslint-plugin-import": "2.18.2",
-        "eslint-plugin-jsx-a11y": "6.2.3",
-        "eslint-plugin-react-hooks": "^1.6.1",
-        "express": "4.17.1",
-        "express-flash": "0.0.2",
-        "express-jwt": "^5.3.1",
-        "express-jwt-authz": "^2.3.1",
-        "express-session": "^1.17.0",
-        "express-validator": "^6.2.0",
-        "file-loader": "3.0.1",
-        "fs-extra": "7.0.1",
-        "helmet": "^3.21.2",
-        "html-webpack-plugin": "4.0.0-beta.5",
-        "http-status-codes": "^1.4.0",
-        "i18next-express-middleware": "^1.8.2",
-        "identity-obj-proxy": "3.0.0",
-        "is-wsl": "^1.1.0",
-        "jest": "24.9.0",
-        "jest-environment-jsdom-fourteen": "0.1.0",
-        "jest-resolve": "24.9.0",
-        "jest-watch-typeahead": "0.4.0",
-        "jwks-rsa": "^1.6.0",
-        "log4js": "^5.3.0",
-        "mini-css-extract-plugin": "0.8.0",
-        "morgan": "^1.9.1",
-        "optimize-css-assets-webpack-plugin": "5.0.3",
-        "passport": "^0.4.0",
-        "passport-auth0": "^1.2.1",
-        "path": "0.12.7",
-        "pnp-webpack-plugin": "1.5.0",
-        "postcss-flexbugs-fixes": "4.1.0",
-        "postcss-loader": "3.0.0",
-        "postcss-normalize": "7.0.1",
-        "postcss-preset-env": "6.7.0",
-        "postcss-safe-parser": "4.0.1",
-        "react": "^16.11.0",
-        "react-app-polyfill": "^1.0.4",
-        "react-dev-utils": "^9.1.0",
-        "react-dom": "^16.11.0",
-        "react-helmet": "^5.2.1",
-        "react-loadable": "^5.5.0",
-        "react-redux": "^7.1.3",
-        "react-router": "^5.1.2",
-        "redux-thunk": "^2.3.0",
-        "resolve": "1.12.0",
-        "resolve-url-loader": "3.1.0",
-        "sass-loader": "7.2.0",
-        "semver": "6.3.0",
-        "sequelize": "^5.21.2",
-        "serve-favicon": "^2.5.0",
-        "style-loader": "1.0.0",
-        "terser-webpack-plugin": "1.4.1",
-        "ts-pnp": "1.1.4",
-        "typescript": "3.6.4",
-        "url-loader": "2.1.0",
-        "webpack": "4.41.0",
-        "webpack-dev-server": "3.2.1",
-        "webpack-manifest-plugin": "2.1.1",
-        "workbox-webpack-plugin": "4.3.1"
-    },
-    "scripts": {
-        "start-dev": "nodemon --config \"./src/server/nodemon.json\"/",
-        "start": "node scripts/start.js",
-        "build": "node scripts/build.js",
-        "test": "node scripts/test.js"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "jest": {
-        "roots": [
-            "<rootDir>/src"
-        ],
-        "collectCoverageFrom": [
-            "src/client/**/*.{js,jsx,ts,tsx}",
-            "!src/client/**/*.d.ts"
-        ],
-        "setupFiles": [
-            "react-app-polyfill/jsdom"
-        ],
-        "setupFilesAfterEnv": [],
-        "testMatch": [
-            "<rootDir>/src/client/**/__tests__/**/*.{js,jsx,ts,tsx}",
-            "<rootDir>/src/client/**/*.{spec,test}.{js,jsx,ts,tsx}"
-        ],
-        "testEnvironment": "jest-environment-jsdom-fourteen",
-        "transform": {
-            "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
-            "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-            "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-        },
-        "transformIgnorePatterns": [
-            "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
-            "^.+\\.module\\.(css|sass|scss)$"
-        ],
-        "modulePaths": [],
-        "moduleNameMapper": {
-            "^react-native$": "react-native-web",
-            "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-        },
-        "moduleFileExtensions": [
-            "web.js",
-            "js",
-            "web.ts",
-            "ts",
-            "web.tsx",
-            "tsx",
-            "json",
-            "web.jsx",
-            "jsx",
-            "node"
-        ],
-        "watchPlugins": [
-            "jest-watch-typeahead/filename",
-            "jest-watch-typeahead/testname"
-        ]
-    },
-    "babel": {
-        "presets": [
-            "react-app"
-        ]
-    },
-    "devDependencies": {
-        "@types/express": "^4.17.2",
-        "@types/react-helmet": "^5.0.14",
-        "@types/react-loadable": "^5.5.2",
-        "@types/react-redux": "^7.1.5",
-        "@types/react-router": "^5.1.2",
-        "@types/redux": "^3.6.0",
-        "eslint-plugin-react": "^7.14.3",
-        "nodemon": "^1.19.4",
-        "prettier": "^1.18.2",
-        "ts-node": "^8.5.0"
+  "name": "calcetto",
+  "version": "0.1.0",
+  "private": true,
+  "proxy": "http://localhost:8080",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/paolocattani/calcetto.git/"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsc --noEmit && lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "eslint . --fix",
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "express-jwt": "^5.3.1",
+    "express-jwt-authz": "^2.3.1",
+    "express-session": "^1.17.0",
+    "helmet": "^3.21.2",
+    "jwks-rsa": "^1.6.0",
+    "log4js": "^6.0.0",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.19.4",
+    "passport": "^0.4.0",
+    "passport-auth0": "^1.2.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.2.0",
+    "ts-node": "^8.5.2",
+    "typescript": "^3.7.2"
+  },
+  "scripts": {
+    "dev": "concurrently --kill-others-on-fail \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:server": "cd server && nodemon --config \"./nodemon.json\"/",
+    "dev:client": "react-scripts start ",
+    "prod": "concurrently --kill-others-on-fail \"npm run prod:server\" \"npm run prod:client\"",
+    "prod:server": "cd server && nodemon --config \"./nodemon.json\"/",
+    "prod:client": "react-scripts build && serve -s build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.17.1",
+    "@types/compression": "^1.0.1",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.2",
+    "@types/express-session": "^1.15.15",
+    "@types/helmet": "0.0.45",
+    "@types/morgan": "^1.7.37",
+    "@types/node": "^12.12.9",
+    "@types/passport": "^1.0.1",
+    "@types/passport-auth0": "^1.0.2",
+    "concurrently": "^5.0.0"
+  }
 }
