ADV - improve AppServer and test basic middlware

--- a/.env
+++ b/.env
@@ -1,7 +1,15 @@
 # max age for static contents
 STATIC_CONTENTS_CACHE=10000
 
-# Auth
+#Server
+SERVER_HOST=localhost
+SERVER_PORT=8080
+
+#Client
+SERVER_HOST=localhost
+CLIENT_PORT=3000
+
+#Auth
 AUTH0_AUDIENCE=YOUR_API_IDENTIFIER
 AUTH0_CLIENT_ID=Jz6QVih9OTeJ3ZDkG2sDrSLWOG2FqExw
 AUTH0_DOMAIN=dev-tkgbz7rf.auth0.com
