--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "https://github.com/paolocattani/calcetto.git/"
   },
+  "homepage": "https://github.com/paolocattani/calcetto#readme",
   "husky": {
     "hooks": {
       "pre-commit": "tsc --noEmit && lint-staged"
@@ -25,6 +26,7 @@
     "express-jwt": "^5.3.1",
     "express-jwt-authz": "^2.3.1",
     "express-session": "^1.17.0",
+    "glob": "^7.1.6",
     "helmet": "^3.21.2",
     "jwks-rsa": "^1.6.0",
     "log4js": "^6.0.0",
@@ -73,6 +75,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/express-session": "^1.15.15",
+    "@types/glob": "^7.1.1",
     "@types/helmet": "0.0.45",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.12.9",
