--- a/package.json
+++ b/package.json
@@ -21,6 +21,21 @@
     ]
   },
   "dependencies": {
+    "@types/body-parser": "^1.17.1",
+    "@types/compression": "^1.0.1",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.2",
+    "@types/express-session": "^1.15.15",
+    "@types/glob": "^7.1.1",
+    "@types/helmet": "0.0.45",
+    "@types/morgan": "^1.7.37",
+    "@types/node": "^12.12.9",
+    "@types/passport": "^1.0.1",
+    "@types/passport-auth0": "^1.0.2",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express-jwt": "^5.3.1",
@@ -66,21 +81,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/body-parser": "^1.17.1",
-    "@types/compression": "^1.0.1",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.6",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.2",
-    "@types/express-session": "^1.15.15",
-    "@types/glob": "^7.1.1",
-    "@types/helmet": "0.0.45",
-    "@types/morgan": "^1.7.37",
-    "@types/node": "^12.12.9",
-    "@types/passport": "^1.0.1",
-    "@types/passport-auth0": "^1.0.2",
-    "concurrently": "^5.0.0"
   }
 }
