--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "@types/bluebird": "^3.5.29",
     "@types/body-parser": "^1.17.1",
     "@types/compression": "^1.0.1",
     "@types/cookie-parser": "^1.4.2",
@@ -36,6 +37,7 @@
     "@types/passport-auth0": "^1.0.2",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
+    "@types/validator": "^12.0.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express-jwt": "^5.3.1",
@@ -49,9 +51,13 @@
     "nodemon": "^1.19.4",
     "passport": "^0.4.0",
     "passport-auth0": "^1.2.1",
+    "pg": "^7.14.0",
+    "pg-hstore": "^2.3.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
+    "sequelize": "^5.21.2",
+    "sequelize-cli": "^5.5.1",
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
   },
