--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
-# max age for static contents
-STATIC_CONTENTS_CACHE=10000
-
 #Server
 SERVER_HOST=localhost
 SERVER_PORT=8080
@@ -8,6 +5,13 @@ SERVER_PORT=8080
 #Client
 CLIENT_HOST=localhost
 CLIENT_PORT=3000
+
+#Dbs
+DEV_URL=postgres://psAdmin:asvp1429$@localhost/calcettoDb
+PROD_URL=postgres://psAdmin:asvp1429$@localhost/calcettoDb
+
+# max age for static contents
+STATIC_CONTENTS_CACHE=10000
 
 #Auth
 AUTH0_AUDIENCE=YOUR_API_IDENTIFIER
