--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1",
     "sequelize-typescript": "^1.0.0",
