--- a/package.json
+++ b/package.json
@@ -94,11 +94,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
+    "concurrently": "^5.0.0",
     "eslint": "^6.6.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1"
   }
 }
