--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "@types/glob": "^7.1.1",
     "@types/helmet": "0.0.45",
     "@types/morgan": "^1.7.37",
-    "@types/node": "^12.12.9",
-    "@types/passport": "^1.0.1",
+    "@types/node": "^12.12.14",
+    "@types/passport": "^1.0.2",
     "@types/passport-auth0": "^1.0.2",
-    "@types/react": "^16.9.11",
+    "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
-    "@types/validator": "^12.0.0",
+    "@types/validator": "^12.0.1",
+    "bootstrap": "^4.4.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express-jwt": "^5.3.1",
@@ -45,22 +46,24 @@
     "express-session": "^1.17.0",
     "glob": "^7.1.6",
     "helmet": "^3.21.2",
+    "jquery": "^3.4.1",
     "jwks-rsa": "^1.6.0",
-    "log4js": "^6.0.0",
+    "log4js": "^6.1.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.4",
     "passport": "^0.4.0",
-    "passport-auth0": "^1.2.1",
+    "passport-auth0": "^1.3.0",
     "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1",
     "sequelize-typescript": "^1.0.0",
-    "ts-node": "^8.5.2",
+    "ts-node": "^8.5.4",
     "typescript": "^3.7.2"
   },
   "scripts": {
@@ -92,14 +95,14 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.8.0",
-    "@typescript-eslint/parser": "^2.8.0",
+    "@typescript-eslint/eslint-plugin": "^2.9.0",
+    "@typescript-eslint/parser": "^2.9.0",
     "concurrently": "^5.0.0",
-    "eslint": "^6.6.0",
+    "eslint": "^6.7.2",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react": "^7.17.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1"
   }
