--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -18,7 +18,7 @@
         "sourceMap": true /* Generates corresponding '.map' file. */,
         // "outFile": "./",                       /* Concatenate and emit output to single file. */
         "outDir": "./dist" /* Redirect output structure to the directory. */,
-        "rootDir": "../" /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
+        "rootDir": "." /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
@@ -77,6 +77,5 @@
         "./node_modules",
         "*.css",
         "*.scss",
-        "../src"
     ]
 }
