--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/passport-auth0": "^1.0.2",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.3",
     "@types/validator": "^12.0.1",
     "bootstrap": "^4.4.1",
     "cookie-parser": "^1.4.4",
@@ -59,7 +60,8 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.2",
