--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-select": "^3.0.8",
     "@types/validator": "^12.0.1",
     "bootstrap": "^4.4.1",
     "cookie-parser": "^1.4.4",
@@ -83,9 +84,6 @@
     "eject": "react-scripts eject",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -99,8 +97,8 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.9.0",
-    "@typescript-eslint/parser": "^2.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.12.0",
+    "@typescript-eslint/parser": "^2.12.0",
     "concurrently": "^5.0.0",
     "eslint": "^6.7.2",
     "eslint-config-google": "^0.14.0",
