--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,8 @@
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
     "wayou.vscode-todo-highlight",
-    "shardulm94.trailing-spaces"
+    "shardulm94.trailing-spaces",
+    "coenraads.bracket-pair-colorizer-2",
+    "vscode-icons-team.vscode-icons"
   ]
 }
