--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "^4.8.2",
     "@types/bluebird": "^3.5.29",
     "@types/body-parser": "^1.17.1",
     "@types/compression": "^1.0.1",
@@ -61,6 +60,7 @@
     "pg-hstore": "^2.3.3",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-table-next": "^3.3.3",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
