--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
     "@types/express-session": "^1.15.15",
     "@types/glob": "^7.1.1",
     "@types/helmet": "0.0.45",
-    "@types/jest": "^24.0.23",
+    "@types/jest": "^24.9.0",
     "@types/morgan": "^1.7.37",
-    "@types/node": "^12.12.14",
+    "@types/node": "^12.12.25",
     "@types/passport": "^1.0.2",
     "@types/passport-auth0": "^1.0.2",
-    "@types/react": "^16.9.13",
+    "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
-    "@types/react-select": "^3.0.8",
+    "@types/react-select": "^3.0.10",
     "@types/validator": "^12.0.1",
     "bootstrap": "^4.4.1",
     "cookie-parser": "^1.4.4",
@@ -50,29 +50,31 @@
     "glob": "^7.1.6",
     "helmet": "^3.21.2",
     "jquery": "^3.4.1",
-    "jwks-rsa": "^1.6.0",
+    "jwks-rsa": "^1.6.1",
     "log4js": "^6.1.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.4",
-    "passport": "^0.4.0",
-    "passport-auth0": "^1.3.0",
-    "pg": "^7.14.0",
+    "passport": "^0.4.1",
+    "passport-auth0": "^1.3.1",
+    "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-table-next": "^3.3.3",
     "react-bootstrap-table2-editor": "^1.4.0",
+    "react-bootstrap-table2-filter": "^1.3.0",
+    "react-bootstrap-table2-toolkit": "^2.1.1",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.21.2",
+    "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1",
-    "sequelize-typescript": "^1.0.0",
-    "ts-node": "^8.5.4",
+    "sequelize-typescript": "^1.1.0",
+    "ts-node": "^8.6.2",
     "typeface-roboto": "0.0.75",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "dev": "concurrently --kill-others-on-fail \"npm run dev:server\" \"npm run dev:client\"",
@@ -100,14 +102,14 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.12.0",
-    "@typescript-eslint/parser": "^2.12.0",
-    "concurrently": "^5.0.0",
-    "eslint": "^6.7.2",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
+    "concurrently": "^5.0.2",
+    "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1"
   }
