--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
+    "babel-node": "0.0.1-security",
     "concurrently": "^5.0.2",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
