--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ PORT=5000
 SERVER_HOST=localhost
 SERVER_PORT=5001
 SERVER_CPU=2
-SERVER_FORCE=true
+SERVER_FORCE=false
 #Dbs
 DEV_URL=postgres://calcetto:calcetto@localhost:5432/calcetto
 # DEV_URL=postgres://njuxkhdo:TFNagpGTCykWy2VIK9W5zhuhVEBHmbmL@horton.elephantsql.com:5432/njuxkhdo
