--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "passport-auth0": "^1.3.1",
     "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
+    "primereact": "^3.4.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-table-next": "^3.3.3",
