--- a/.env
+++ b/.env
@@ -11,10 +11,10 @@ PORT=5000
 SERVER_HOST=localhost
 SERVER_PORT=5001
 SERVER_CPU=2
-SERVER_FORCE=true
+SERVER_FORCE=false
 #Dbs
-DEV_URL=postgres://calcetto:calcetto@localhost:5432/calcetto
-# DEV_URL=postgres://njuxkhdo:TFNagpGTCykWy2VIK9W5zhuhVEBHmbmL@horton.elephantsql.com:5432/njuxkhdo
+#DEV_URL=postgres://calcetto:calcetto@localhost:5432/calcetto
+DEV_URL=postgres://njuxkhdo:TFNagpGTCykWy2VIK9W5zhuhVEBHmbmL@horton.elephantsql.com:5432/njuxkhdo
 PROD_URL=postgres://calcetto:calcetto@localhost:5432/calcetto
 
 # max age for static contents
