CHG - serve production build

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 # Enviroment
-NODE_ENV=development
-
+NODE_ENV=production
 
 #Client
 CLIENT_HOST=localhost
@@ -12,10 +11,11 @@ SERVER_HOST=localhost
 SERVER_PORT=5001
 SERVER_WORKERS=2
 SERVER_FORCE=false
+
 #Dbs
 #DEV_URL=postgres://calcetto:calcetto@localhost:5432/calcetto
 DEV_URL=postgres://njuxkhdo:TFNagpGTCykWy2VIK9W5zhuhVEBHmbmL@horton.elephantsql.com:5432/njuxkhdo
-PROD_URL=postgres://calcetto:calcetto@localhost:5432/calcetto
+PROD_URL=postgres://njuxkhdo:TFNagpGTCykWy2VIK9W5zhuhVEBHmbmL@horton.elephantsql.com:5432/njuxkhdo
 
 # max age for static contents
 STATIC_CONTENTS_CACHE=10000
