--- a/package.json
+++ b/package.json
@@ -74,13 +74,12 @@
     "dev": "concurrently --kill-others-on-fail \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "cd server && nodemon --config \"./nodemon.json\"",
     "dev:client": "react-scripts start ",
-    "prod": "concurrently --kill-others-on-fail \"npm run prod:server\" \"npm run prod:client\"",
-    "prod:server": "cd server && nodemon --config \"./nodemon.json\"",
-    "prod:client": "react-scripts build && serve -s build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "prod": "NODE_ENV=production && npm run CRA:build && cd server && nodemon --config \"./nodemon.json\"",
+    "start":"npm run prod",
+    "CRA:start": "react-scripts start",
+    "CRA:build": "react-scripts build",
+    "CRA:test": "react-scripts test",
+    "CRA:eject": "react-scripts eject",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "browserslist": {
