--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,5 +19,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm run CRA:build --if-present
-      env:
-        CI: true
+      # env:
+        # CI: true
