--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
     "dev": "concurrently --kill-others-on-fail \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "cd server && nodemon --config \"./nodemon.json\"",
     "dev:client": "react-scripts start ",
-    "prod": "cd server && nodemon --config \"./nodemon.json\"",
-    "start":"npm run prod",
+    "prod:heroku": "node --max_old_space_size=512 node_modules/.bin/react-scripts build && cd server && nodemon --config \"./nodemon.json\"",
+    "start":"npm run prod:heroku",
     "CRA:start": "react-scripts start",
     "CRA:build": "react-scripts build",
     "CRA:test": "react-scripts test",
