--- a/package.json
+++ b/package.json
@@ -74,8 +74,10 @@
     "dev": "concurrently --kill-others-on-fail \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "cd server && nodemon --config \"./nodemon.json\"",
     "dev:client": "react-scripts start ",
-    "prod:heroku": "node --max_old_space_size=512 node_modules/.bin/react-scripts build && cd server && nodemon --config \"./nodemon.json\"",
-    "start":"npm run prod:heroku",
+    "prod:heroku": "npm run prod:heroku:client && npm run prod:heroku:server",
+    "prod:heroku:server":"./node_modules/.bin/ts-node --project ./server/tsconfig.json ./server/server.ts  server.js --optimize_for_size --max_old_space_size=460 --gc_interval=100",
+    "prod:heroku:client": "node --optimize_for_size --max_old_space_size=460 -gc_interval=100 node_modules/.bin/react-scripts build",
+    "start": "npm run prod:heroku",
     "CRA:start": "react-scripts start",
     "CRA:build": "react-scripts build",
     "CRA:test": "react-scripts test",
