--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "prod:heroku": "npm run prod:heroku:client && npm run prod:heroku:server",
     "prod:heroku:server":"./node_modules/.bin/ts-node --project ./server/tsconfig.json ./server/server.ts  server.js --optimize_for_size --max_old_space_size=460 --gc_interval=100",
     "prod:heroku:client": "node --optimize_for_size --max_old_space_size=460 -gc_interval=100 node_modules/.bin/react-scripts build",
-    "start": "npm run prod:heroku",
+    "start": "npm run prod:heroku:server",
     "CRA:start": "react-scripts start",
     "CRA:build": "react-scripts build",
     "CRA:test": "react-scripts test",
