--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.6.4",
     "@types/bluebird": "^3.5.30",
     "@types/body-parser": "^1.19.0",
     "@types/compression": "^1.7.0",
