--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^3.0.10",
     "@types/validator": "^12.0.1",
+    "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "glob": "^7.1.6",
     "helmet": "^3.21.3",
     "jquery": "^3.4.1",
+    "jsonwebtoken": "^8.5.1",
     "log4js": "^6.1.2",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.4",
