--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^3.0.10",
     "@types/validator": "^12.0.1",
+    "@types/yup": "^0.26.32",
     "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "formik": "^2.1.4",
     "glob": "^7.1.6",
     "helmet": "^3.21.3",
     "jquery": "^3.4.1",
@@ -73,7 +75,8 @@
     "sequelize-typescript": "^1.1.0",
     "ts-node": "^8.6.2",
     "typeface-roboto": "0.0.75",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "dev": "concurrently --kill-others-on-fail \"npm run dev:server\" \"npm run dev:client\"",
