--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/passport-auth0": "^1.0.4",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@types/react-facebook-login": "^4.1.1",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^3.0.10",
     "@types/validator": "^12.0.1",
@@ -71,6 +72,8 @@
     "react-bootstrap-table2-filter": "^1.3.1",
     "react-bootstrap-table2-toolkit": "^2.1.2",
     "react-dom": "^16.13.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "react-select": "^3.0.8",
