--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@types/morgan": "^1.9.0",
     "@types/node": "^12.12.30",
     "@types/react": "^16.9.25",
+    "@types/react-bootstrap-date-picker": "^4.0.6",
+    "@types/react-datepicker": "^2.11.0",
     "@types/react-dom": "^16.9.5",
     "@types/react-facebook-login": "^4.1.1",
     "@types/react-router-dom": "^5.1.3",
@@ -68,7 +70,7 @@
     "react-bootstrap-table2-editor": "^1.4.0",
     "react-bootstrap-table2-filter": "^1.3.1",
     "react-bootstrap-table2-toolkit": "^2.1.2",
-    "react-calendar": "^3.0.0",
+    "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.2",
