--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     ]
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-brands-svg-icons": "^5.12.1",
-    "@fortawesome/free-regular-svg-icons": "^5.12.1",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.30",
@@ -32,29 +32,29 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.3",
+    "@types/express": "^4.17.4",
     "@types/express-session": "^1.17.0",
     "@types/glob": "^7.1.1",
     "@types/helmet": "0.0.45",
     "@types/jest": "^24.9.1",
     "@types/jsonwebtoken": "^8.3.8",
     "@types/morgan": "^1.9.0",
-    "@types/node": "^12.12.30",
-    "@types/react": "^16.9.25",
+    "@types/node": "^12.12.34",
+    "@types/react": "^16.9.32",
     "@types/react-bootstrap-date-picker": "^4.0.6",
     "@types/react-datepicker": "^2.11.0",
-    "@types/react-dom": "^16.9.5",
+    "@types/react-dom": "^16.9.6",
     "@types/react-facebook-login": "^4.1.1",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^3.0.11",
     "@types/validator": "^12.0.1",
-    "@types/yup": "^0.26.33",
+    "@types/yup": "^0.26.34",
     "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "glob": "^7.1.6",
-    "helmet": "^3.21.3",
+    "helmet": "^3.22.0",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.1.2",
@@ -64,7 +64,7 @@
     "pg-hstore": "^2.3.3",
     "primereact": "^3.4.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap": "^1.0.0",
     "react-bootstrap-table-next": "^3.3.5",
     "react-bootstrap-table2-editor": "^1.4.0",
     "react-bootstrap-table2-filter": "^1.3.1",
@@ -72,15 +72,15 @@
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.1.2",
+    "react-google-login": "^5.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-select": "^3.1.0",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.21.5",
+    "sequelize": "^5.21.6",
     "sequelize-cli": "^5.5.1",
     "sequelize-typescript": "^1.1.0",
-    "ts-node": "^8.8.1",
+    "ts-node": "^8.8.2",
     "typeface-roboto": "0.0.75",
     "typescript": "^3.8.3"
   },
@@ -111,8 +111,8 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
     "babel-node": "0.0.1-security",
     "concurrently": "^5.1.0",
     "eslint": "^6.8.0",
