--- a/package.json
+++ b/package.json
@@ -73,15 +73,19 @@
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.3",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-select": "^3.1.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.6",
     "sequelize-cli": "^5.5.1",
     "sequelize-typescript": "^1.1.0",
     "ts-node": "^8.8.2",
     "typeface-roboto": "0.0.75",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^3.8.3",
     "uuid": "^7.0.3"
   },
@@ -112,6 +116,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.7",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "babel-node": "0.0.1-security",
