--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-bootstrap-table-next": "^4.0.0",
     "@types/react-redux": "^7.1.7",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
@@ -126,6 +127,8 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
+    "install": "^0.13.0",
+    "npm": "^6.14.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4"
   }
