--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Enviroment
 NODE_ENV=development
-NODE_PATH=src
+NODE_PATH=./
 
 #Client
 CLIENT_HOST=localhost
@@ -12,7 +12,7 @@ PORT=5000
 SERVER_HOST=localhost
 SERVER_PORT=5001
 SERVER_WORKERS=2
-SERVER_FORCE=false
+SERVER_FORCE=FALSE
 SERVER_SECRET='O<o@cZqCJ-Qmu1-\<C<e@R4m0n(nR&Sk'
 SERVER_HASH='dummy$Hash'
 #Dbs
