--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# FIXME:
+/docs
 /node_modules
 /.pnp
 .pnp.js
@@ -9,10 +10,12 @@
 /coverage
 
 # production
+# FIXME:
 # /build
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
