--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react-dom": "^16.9.6",
     "@types/react-facebook-login": "^4.1.1",
     "@types/react-router-dom": "^5.1.4",
+    "@types/react-router-redux": "^5.0.18",
     "@types/react-select": "^3.0.11",
     "@types/validator": "^12.0.1",
     "@types/yup": "^0.26.36",
@@ -75,6 +76,7 @@
     "react-google-login": "^5.1.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "^3.4.1",
     "react-select": "^3.1.0",
     "redux": "^4.0.5",
