--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react-facebook-login": "^4.1.1",
     "@types/react-router-dom": "^5.1.4",
     "@types/react-select": "^3.0.11",
+    "@types/umzug": "^2.2.3",
     "@types/validator": "^12.0.1",
     "@types/yup": "^0.26.36",
     "bcrypt": "^4.0.1",
@@ -87,6 +88,7 @@
     "typeface-roboto": "0.0.75",
     "typesafe-actions": "^5.1.0",
     "typescript": "^3.9.2",
+    "umzug": "^2.3.0",
     "uuid": "^7.0.3"
   },
   "scripts": {
