--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     ]
   },
   "dependencies": {
-    "@dabeng/react-orgchart": "^1.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
@@ -49,8 +48,6 @@
     "@types/react-router-dom": "^5.1.4",
     "@types/react-select": "^3.0.11",
     "@types/umzug": "^2.2.3",
-    "@types/validator": "^12.0.1",
-    "@types/yup": "^0.26.36",
     "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
     "cookie-parser": "^1.4.5",
@@ -95,7 +92,7 @@
     "dev": "concurrently --kill-others-on-fail \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "cd server && nodemon --config \"./nodemon.json\"",
     "dev:client": "react-scripts start ",
-    "prod:heroku": "npm run prod:heroku:client && npm run prod:heroku:server",
+    "prod:heroku": "npm run prod:heroku:server && npm run prod:heroku:client",
     "prod:heroku:server": "./node_modules/.bin/ts-node --project ./server/tsconfig.json ./server/server.ts  server.js --optimize_for_size --max_old_space_size=460 --gc_interval=100",
     "prod:heroku:client": "node --optimize_for_size --max_old_space_size=460 -gc_interval=100 node_modules/.bin/react-scripts build",
     "start": "npm run prod:heroku:server",
