--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "react-select": "^3.1.0",
+    "react-toastify": "^6.0.5",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reflect-metadata": "^0.1.13",
