--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,6 +20,6 @@ jobs:
     - run: npm install
     # Code quality
     # - uses: hallee/eslint-action@1.0.1
-    - run: npm run CRA:build --if-present
+    # - run: npm run CRA:build --if-present
       # env:
         # CI: true
