--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,19 +2,37 @@ name: Node.js CI
 on: [push, pull_request]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [ 8.x, 10.x, 12.x]
     steps:
       - uses: actions/checkout@v2
+
+      # Set up Node
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install
-  
+
+      # Cache node-modules
+      - name: Cache Node.js modules
+        uses: actions/cache@v2
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-node-
+            ${{ runner.OS }}-
+      # Install dependecies
+      - name: Install dependencies
+        run: npm ci
+      # Test
+      - name: Test
+        run: npm run start
+
   # Code Quality
   check-quality:
     runs-on: ubuntu-latest
