--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "calcetto",
-  "version": "0.1.0",
   "private": true,
+  "version": "2.0.1",
+  "description": "Table Soccer Manager",
+  "keywords": [
+    "react",
+    "table soccer",
+    "typescript",
+    "sequelize"
+  ],
   "proxy": "http://localhost:5001",
   "repository": {
     "type": "git",
@@ -93,6 +100,7 @@
     "dev": "concurrently --kill-others-on-fail \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "cd server && nodemon --config \"./nodemon.json\"",
     "dev:client": "react-scripts start ",
+    "prod:build:server":"tsc --pretty --allowJs --outDir ./build_server -p ./server",
     "prod:heroku": "npm run prod:heroku:server && npm run prod:heroku:client",
     "prod:heroku:server": "./node_modules/.bin/ts-node --project ./server/tsconfig.json ./server/server.ts  server.js --optimize_for_size --max_old_space_size=460 --gc_interval=100",
     "prod:heroku:client": "node --optimize_for_size --max_old_space_size=460 -gc_interval=100 node_modules/.bin/react-scripts build",
@@ -128,8 +136,6 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.5",
     "install": "^0.13.0",
-    "npm": "^6.14.7",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5"
   }
 }
