--- a/.env
+++ b/.env
@@ -2,9 +2,11 @@
 NODE_ENV=development
 
 #Client
-CLIENT_HOST=localhost
-CLIENT_PORT=5000
-CLIENT_COMMIT_HASH=7901ea3
+CLIENT_HOST=localhost #Utilizzato dal server
+CLIENT_PORT=5000 #Utilizzato dal server
+REACT_APP_CLIENT_VERSION=2.4.0
+REACT_APP_CLIENT_COMMIT_HASH=7901ea3
+
 PORT=5000
 #HTTPS=true
 
