--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "cors": "^2.8.5",
     "glob": "^7.1.6",
     "helmet": "^4.1.0",
+    "i18next": "^19.7.0",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.0.18",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "localforage": "^1.9.0",
@@ -82,6 +85,7 @@
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.21",
+    "react-i18next": "^11.7.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
