--- a/package.json
+++ b/package.json
@@ -121,7 +121,8 @@
     "test:coverage": "react-scripts test --coverage --runInBand --watchAll=false",
     "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "analyze": "source-map-explorer build/static/js/*.js --html build-analysis.html"
+    "lint:report": "eslint -f json -o analysis/report.json .",
+    "analyze": "source-map-explorer build/static/js/*.js --html analysis/build-analysis.html"
   },
   "browserslist": {
     "production": [
@@ -154,6 +155,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-sonarjs": "^0.5.0",
     "eslint-plugin-testing-library": "^3.8.0",
     "install": "^0.13.0",
     "jest-fetch-mock": "3.0.3",
