--- a/.github/workflows/Complete Pipeline.yml
+++ b/.github/workflows/Complete Pipeline.yml
@@ -45,6 +45,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
     name: Tests
+    # For now disable this step
+    if: ${{ 1==2 }}
     steps:
       - uses: actions/checkout@v2
       # Cache node-modules
@@ -78,6 +80,9 @@ jobs:
         with:
           # Disabling shallow clone is recommended for improving relevancy of reporting
           fetch-depth: 0
+      # Install dependecies
+      - name: Install dependencies
+        run: npm ci
       # Generate report
       - name: Lint report
         run: npm run lint:report
