--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,7 @@ sonar.projectKey=calcetto
 ## https://sonarcloud.io/documentation/analysis/analysis-parameters/
 # Optional Parameters
 sonar.projectName=Calcetto
+sonar.projectVersion=1.0
 
 sonar.tests=./src/test
 # relative paths to source directories. More details and properties are described
@@ -19,3 +20,4 @@ sonar.verbose=true
 # Coverage
 # -Dsonar.javascript.lcov.reportPaths=coverage/coverage-final.json
 
+sonar.sourceEncoding=UTF-8
