--- a/.github/workflows/Complete Pipeline.yml
+++ b/.github/workflows/Complete Pipeline.yml
@@ -10,7 +10,7 @@ jobs:
     name: Build
     strategy:
       matrix:
-        node-version: [ 8.x, 10.x, 12.x]
+        node-version: [ 8.x, 10.x, 12.x, 14.x]
     steps:
       - uses: actions/checkout@v2
 
@@ -84,8 +84,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
       # Generate report
-      - name: Lint report
-        run: npm run lint:report
+      # - name: Lint report
+        run: eslint -f json -o ./analysis/report.json .
       # https://github.com/marketplace/actions/sonarcloud-scan
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
