--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.organization=paolocattani
-sonar.projectKey=calcetto
+sonar.projectKey=paolocattani_calcetto
 
 
 ## https://sonarcloud.io/documentation/analysis/analysis-parameters/
