--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.tests=./src/test
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
 sonar.sources=./src,./server
-sonar.exclusions=./build,./analysis
+sonar.exclusions=./build,./analysis/*
 
 sonar.eslint.reportPaths=./analysis/report.json
 
@@ -21,3 +21,6 @@ sonar.verbose=true
 # -Dsonar.javascript.lcov.reportPaths=coverage/coverage-final.json
 
 sonar.sourceEncoding=UTF-8
+
+sonar.issues.defaultAssigneeLogin=paolocattani
+
