--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,3 +23,6 @@ sonar.sourceEncoding=UTF-8
 
 sonar.issues.defaultAssigneeLogin=paolocattani
 
+# Remove this after test
+sonar.coverage.exclusions=**/**
+
