Moved models to @common folder

--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "helmet": "^4.1.0",
     "i18next": "^19.7.0",
     "i18next-browser-languagedetector": "^6.0.1",
-    "i18next-http-backend": "^1.0.18",
+    "i18next-http-backend": "^1.0.19",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "localforage": "^1.9.0",
@@ -117,7 +117,7 @@
     "CRA:start": "react-scripts start",
     "CRA:build": "react-scripts build",
     "CRA:eject": "react-scripts eject",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "test:coverage": "react-scripts test --coverage --runInBand --watchAll=false",
     "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
