--- a/src/components/Swagger/api-definition.yaml
+++ b/src/components/Swagger/api-definition.yaml
@@ -13,7 +13,7 @@ paths:
   #-----------------------------------------------------------------------------
   # Authentication
   #
-  /auth:
+  /auth/check:
     get:
       tags:
         - Authentication
@@ -29,8 +29,10 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '500':
           $ref: '#/components/responses/ServerError'
-    delete:
-      summary: Delete user
+
+  /auth/logout:
+    get:
+      summary: Logout.
       tags:
         - Authentication
       responses:
@@ -40,17 +42,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AuthenticationReponse'
-        '400':
-          description: |
-            User not found for provided data or invalid credentials
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BasicResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '500':
-          $ref: '#/components/responses/ServerError'
+
 
   /auth/update:
     put:
@@ -75,7 +67,7 @@ paths:
         '500':
           $ref: '#/components/responses/ServerError'
 
-  /auth/authentication:
+  /auth/login:
     post:
       summary: Authenticate user
       tags:
@@ -169,9 +161,10 @@ paths:
                           type: string
         '500':
           $ref: '#/components/responses/ServerError'
-  /auth/logout:
-    get:
-      summary: Logout.
+
+  /auth/delete:
+    delete:
+      summary: Delete user
       tags:
         - Authentication
       responses:
@@ -181,6 +174,17 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AuthenticationReponse'
+        '400':
+          description: |
+            User not found for provided data or invalid credentials
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BasicResponse'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/ServerError'
 
   #-----------------------------------------------------------------------------
   # Player
